test/interaction/Issue7842.out
(agda2-status-action "")
(agda2-info-action "*Type-checking*" "" nil)
(agda2-highlight-clear)
(agda2-status-action "")
(agda2-info-action "*All Goals*" "?0 : f x ≡ f y" nil)
((last . 1) . (agda2-goals-action '(0)))
(agda2-info-action "*Error*" "Issue7842.agda:17.21-63: error: [Interaction.CannotGive] Failed to give subst (λ y₁ → x ≡ y₁ → f x ≡ f y₁) ? ? eq when checking that the expression ? has type f x ≡ f y" nil)
((last . 3) . (agda2-maybe-goto '("Issue7842.agda" . 423)))
(agda2-highlight-load-and-delete-action)
(agda2-status-action "")
